--- a/demo/index.html
+++ b/demo/index.html
@@ -14,11 +14,11 @@
             <div id="streamURL">
                 <div class="url-input">
                     <label for="sURL">Stream URL:</label>
-                    <input id="sURL" type="text" value="http://127.0.0.1/flv/7182741-1.flv" />
+                    <input id="sURL" type="text" value="http://7203.liveplay.myqcloud.com/live/7203_QCLOUDROOM5b7bddc5d2abb.flv" />
                     <button onclick="switch_mds()">Switch to MediaDataSource</button>
                 </div>
                 <div class="options">
-                    <input type="checkbox" id="isLive" onchange="saveSettings()" />
+                    <input type="checkbox" checked id="isLive" onchange="saveSettings()" />
                     <label for="isLive">isLive</label>
                     <input type="checkbox" id="withCredentials" onchange="saveSettings()" />
                     <label for="withCredentials">withCredentials</label>
@@ -89,7 +89,8 @@
             }
         }
 
-        function flv_load_mds(mediaDataSource) {
+        //创建player
+            function flv_load_mds(mediaDataSource) {
             var element = document.getElementsByName('videoElement')[0];
             if (typeof player !== "undefined") {
                 if (player != null) {
